--- a/styles/_common-elements.scss
+++ b/styles/_common-elements.scss
@@ -11,30 +11,38 @@
     padding: 0;
     list-style: none;
   }
+
   li {
+    display: flex;
     margin: 0;
     border-bottom: .1rem solid $color-borders;
     position: relative;
-    line-height: 1;
     font-size: 1.9rem;
-    padding: .8em 0;
+    padding: 0;
   }
 
-  li button {
-    appearance: none;
-    background: none;
-    border: none;
-    color: $color-text-primary;
-  }
+    .task-text {
+      padding: 1em 0;
+      line-height: 1.3;
+      flex: 1;
+      font-family: 'Coming Soon', cursive;
+    }
+
+    button {
+      appearance: none;
+      background: none;
+      border: none;
+      color: $color-text-primary;
+    }
 }
 
+
 .complete-task-button {
-  padding-right: 1.2rem;
+  padding-right: 1.5rem;
 }
 
 .delete-task-button {
-  position: absolute;
-  right: 0;
+  padding-left: 1.5rem;
   opacity: .3;
   &:hover {
     opacity: 1;
@@ -58,6 +66,7 @@
 #task-form {
   display: flex;
   #task-input {
+    font-family: 'Coming Soon', cursive;
     flex: 1;
     appearance: none;
     line-height: 1;
